--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -32,18 +32,6 @@ jobs:
           echo ::set-output name=version::${GITHUB_REF#refs/tags/}
           echo ::set-output name=gh-username-lower::$(echo ${{ github.repository_owner }} | tr '[:upper:]' '[:lower:]')
 
-      - name: Build and push Image
-        uses: docker/build-push-action@v5
-        with:
-          file: ./docker/Dockerfile
-          platforms: linux/amd64,linux/arm64
-          tags: ${{ steps.get-variables.outputs.gh-username-lower }}/libretranslate:${{ env.TAG }}
-          push: true
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-        env:
-          TAG: ${{ startsWith(github.ref, 'refs/tags/') && steps.get-variables.outputs.version || 'latest' }}
-
       - name: Free Disk Space (Ubuntu)
         uses: jlumbroso/free-disk-space@main
         with:
@@ -64,10 +52,11 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           file: ./docker/cuda.Dockerfile
-          platforms: linux/amd64
+          platforms: linux/amd64,linux/arm64
           tags: ${{ steps.get-variables.outputs.gh-username-lower }}/libretranslate:${{ env.TAG }}-cuda
           push: true
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          build-args: with_models=true
         env:
           TAG: ${{ startsWith(github.ref, 'refs/tags/') && steps.get-variables.outputs.version || 'latest' }}
