--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -8,8 +8,14 @@ on:
     tags:
       - v*
 
+env:
+  REGISTRY: ghcr.io
+
 jobs:
   main:
+    permissions:
+      contents: read
+      packages: write
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
@@ -20,12 +26,13 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
+        
+      - name: Log in to the Container registry
+        uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Get Variables
         id: get-variables
@@ -54,7 +61,7 @@ jobs:
         with:
           file: ./docker/cuda.Dockerfile
           platforms: linux/amd64,linux/arm64
-          tags: ${{ steps.get-variables.outputs.gh-username-lower }}/libretranslate:${{ env.TAG }}-cuda
+          tags: ${{ env.REGISTRY }}/libretranslate:${{ env.TAG }}-cuda
           push: true
           cache-from: type=gha
           cache-to: type=gha,mode=max
